small spacing issues fixed

--- a/src/ChatDetails.css
+++ b/src/ChatDetails.css
@@ -47,16 +47,16 @@
   display: flex;
   width: 100%;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   flex-direction: row; 
 }
 
 .chat-bubble.received {
   justify-content: flex-start;
+  margin-bottom: 40px;
 }
 
 .chat-bubble.sent {
-  margin-bottom: 15px;
   justify-content: flex-end;
 }
 
@@ -76,7 +76,7 @@
   background-color: #000;
   color: #fff;
   font-size: 15px;
-  line-height: 1.4;
+  line-height: 1.2;
 }
 
 .chat-bubble.received .message-text {
